[package]
name = "drogue-server"
version = "0.7.0"
authors = ["Ulf Lilleengen <lulf@redhat.com>"]
edition = "2018"

[dependencies]

clap = { version = "2.33.3" }
drogue-cloud-console-backend = { path = "../console-backend" }
drogue-cloud-mqtt-endpoint = { path = "../mqtt-endpoint" }
drogue-cloud-service-common = { path = "../service-common" }
drogue-cloud-service-api = { path = "../service-api" }
drogue-cloud-api-key-service = { path = "../api-key-service" }
drogue-cloud-registry-events = { path = "../registry-events" }
drogue-cloud-event-common = { path = "../event-common" }
drogue-cloud-endpoint-common = { path = "../endpoint-common" }
drogue-cloud-device-management-service = { path = "../device-management-service" }
url = "2"
env_logger = { version = "0.7" } 
log = "0.4"
tokio = { version = "1.11.0", features = ["full"] }
ntex = "0.3"
ntex-rt = "0.2.2"
actix-rt = { version = "2.2.0" }